feat : 로그 내용 추가