@@ -24,30 +24,40 @@ import java.util.stream.Collectors;
 @Service
 @RequiredArgsConstructor
 public class ConcertService {
-    private static final Logger logger = LoggerFactory.getLogger(ConcertService.class);
+    private static final Logger log = LoggerFactory.getLogger(ConcertService.class);
 
     private final ConcertScheduleRepository concertScheduleRepository;
     private final SeatRepository seatRepository;
 
     /**
-     * 특정 콘서트의 예매 가능한 날짜 조회
+     * 특정 콘서트의 예약 가능한 날짜 조회
      */
     public List<LocalDate> getAvailableDateList(Long concertId){
-        return concertScheduleRepository.findByConcertIdAndIsSoldOut(concertId, false)
-                .stream()
-                .map(ConcertSchedule::getScheduleDate) // 콘서트 일정
-                .distinct()// 중복 제거
-                .collect(Collectors.toList());
+        try {
+            return concertScheduleRepository.findByConcertIdAndIsSoldOut(concertId, false)
+                    .stream()
+                    .map(ConcertSchedule::getScheduleDate) // 콘서트 일정
+                    .distinct()// 중복 제거
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("예약 가능한 날짜 조회 실패 >> Concert ID: {}", concertId, e);
+            throw e;
+        }
     }
 
     /**
-     * 특정 날짜의 예매 가능한 좌석 조회
+     * 특정 날짜의 예약 가능한 좌석 조회
      */
     public List<ConcertSeatResult> getAvailableSeatList(Long concertId, LocalDate scheduleDate) {
-        return seatRepository.findAvailableSeatList(concertId, scheduleDate)
-                .stream()
-                .map(ConcertSeatResult::from)
-                .toList();
+        try {
+            return seatRepository.findAvailableSeatList(concertId, scheduleDate)
+                    .stream()
+                    .map(ConcertSeatResult::from)
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            log.error("예약 가능한 좌석 조회 실패 >> Concert ID: {}, 날짜: {}", concertId, scheduleDate, e);
+            throw e;
+        }
     }
 
     /**
@@ -55,16 +65,22 @@ public class ConcertService {
      */
     @Transactional
     public ConcertSeatResult reserveSeat(Long seatId) {
-        Seat seat = seatRepository.findByIdWithLock(seatId)
-                .orElseThrow(() -> new CustomException(SeatErrorCode.SEAT_NOT_FOUND));
+        try {
+            Seat seat = seatRepository.findByIdWithLock(seatId)
+                    .orElseThrow(() -> new CustomException(SeatErrorCode.SEAT_NOT_FOUND));
 
-        seat.reserve(); // 좌석 상태 변경
-        Seat reservedSeat = seatRepository.save(seat);
+            seat.reserve(); // 좌석 상태 변경
+            Seat reservedSeat = seatRepository.save(seat);
 
-        // 콘서트 일정 매진 여부 체크
-        updateConcertSoldOutStatus(seat.getConcertId(), seat.getScheduleDate());
+            // 콘서트 일정 매진 여부 체크
+            updateConcertSoldOutStatus(seat.getConcertId(), seat.getScheduleDate());
 
-        return ConcertSeatResult.from(reservedSeat);
+            return ConcertSeatResult.from(reservedSeat);
+
+        } catch (CustomException e) {
+            log.error("[ConcertService] 좌석 예약 실패 >> Seat ID: {}", seatId, e);
+            throw e;
+        }
     }
 
     /**
@@ -72,32 +88,44 @@ public class ConcertService {
      */
     @Transactional
     public ConcertSeatResult payForSeat(Long seatId) {
-        Seat seat = seatRepository.findByIdWithLock(seatId)
-                .orElseThrow(() -> new CustomException(SeatErrorCode.SEAT_NOT_FOUND));
+        try{
+            Seat seat = seatRepository.findByIdWithLock(seatId)
+                    .orElseThrow(() -> new CustomException(SeatErrorCode.SEAT_NOT_FOUND));
 
-        if (seat.getStatus() != SeatStatus.RESERVED) {
-            throw new CustomException(SeatErrorCode.SEAT_NOT_RESERVED);
+            if (seat.getStatus() != SeatStatus.RESERVED) {
+                throw new CustomException(SeatErrorCode.SEAT_NOT_RESERVED);
+            }
+
+            seat.pay(); // 좌석 상태를 PAID로 변경
+            Seat paidSeat = seatRepository.save(seat);
+
+            // 콘서트 일정 매진 여부 체크
+            updateConcertSoldOutStatus(seat.getConcertId(), seat.getScheduleDate());
+
+            return ConcertSeatResult.from(paidSeat);
+        }catch (CustomException e) {
+            log.error("[ConcertService] 좌석 결제 상태 변경 실패 >> Seat ID: {}", seatId, e);
+            throw e;
         }
 
-        seat.pay(); // 좌석 상태를 PAID로 변경
-        Seat paidSeat = seatRepository.save(seat);
-
-        // 콘서트 일정 매진 여부 체크
-        updateConcertSoldOutStatus(seat.getConcertId(), seat.getScheduleDate());
-
-        return ConcertSeatResult.from(paidSeat);
     }
 
     /**
      * 콘서트 매진 여부 체크
      */
     private void updateConcertSoldOutStatus(Long concertId, LocalDate scheduleDate) {
-        if (seatRepository.countAvailableSeats(concertId, scheduleDate) == 0) {
-            ConcertSchedule schedule = concertScheduleRepository.findSchedule(concertId, scheduleDate)
+        ConcertSchedule schedule = new ConcertSchedule();
+        try{
+            schedule = concertScheduleRepository.findSchedule(concertId, scheduleDate)
                     .orElseThrow(() -> new CustomException(ConcertErrorCode.CONCERT_NOT_FOUND));
 
-            schedule.markSoldOut();
-            concertScheduleRepository.save(schedule);
+            if (seatRepository.countAvailableSeats(concertId, scheduleDate) == 0) {
+                schedule.markSoldOut();
+                concertScheduleRepository.save(schedule);
+            }
+        }catch (Exception e) {
+            log.error("[ConcertService] 콘서트 매진 상태 업데이트 실패 >> Concert ID: {}, Sold Out: {}", concertId, schedule.isSoldOut(), e);
+            throw e;
         }
     }
 }
